bk_ida/gccida/c3/purge_single_hard_subreg_set
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/purge_single_hard_subreg_set/src/function.c:3966:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode mode; // [rsp+Ch] [rbp-14h] 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/purge_single_hard_subreg_set/src/function.c:3978:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)reg->fld[0].rtwint), 
  ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/purge_single_hard_subreg_set/src/function.c:3978:18: error: expected expression
( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)reg->fld[0].rtwint), 
                 ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/purge_single_hard_subreg_set/src/function.c:3980:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)reg)); 
  ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/purge_single_hard_subreg_set/src/function.c:3980:18: error: expected expression
( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)reg)); 
                 ^
5 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/purge_single_hard_subreg_set/src/obj/function.o] Error 1
